--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,50 @@ text.id {
   text-anchor: middle;
   font-weight: bold;
 }
+
+
+
+
+
+
+
+
+path.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 4.5px;
+  opacity: 0.8;
+}
+
+marker#resource {
+  fill: red;
+}
+
+path.link.resource {
+  /* stroke: green; */
+}
+
+path.link.property {
+  stroke-dasharray: 0, 2 1;
+}
+
+circle {
+  opacity: 1;
+  stroke: #333;
+  stroke-width: 1.5px;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+}
+
+text.shadow {
+  stroke: #fff;
+  stroke-width: 3px;
+  stroke-opacity: .8;
+}
+
+.nodes {
+  opacity: 1;
+}
