--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -221,7 +221,7 @@ text.id {
     transform: scale(1.4);
   }
 
-  .color-options {
+  .options {
     border: 1px solid transparent;
     border-radius: 4px;
     box-shadow: 0 2px 6px 2px #3c404326;
@@ -275,6 +275,12 @@ text.id {
       height: 26px;
       border-radius: 13px;
     }
+  }
+
+  .options-layout {
+    width: 600px;
+    height: 200px;
+    top: 70px;
   }
 }
 
@@ -476,4 +482,85 @@ text.id {
     font-size: 13px;
   }
 
+}
+
+$primary-color: #3c4043;
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;}
+
+.radio-tile-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  //set dimensions for invisible container
+  .input-container {
+    position: relative;
+    height:  7rem;
+    width:  7rem;
+    margin: 0.5rem;
+
+    //make actual radio input invisible
+    // + stretch to fill container
+    .radio-button {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      cursor: pointer;
+    }
+
+    //default tile styles
+    .radio-tile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid $primary-color;
+      border-radius: 5px;
+      padding: 5px;
+      transition: transform 300ms ease;
+      height: 100px;
+      width: 100px;
+    }
+    .icon svg {
+      fill: $primary-color;
+      width: 3rem;
+      height: 3rem;
+    }
+    .radio-tile-label {
+      text-align: center;
+      font-size: 0.75rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      color: $primary-color;
+      margin-top: 5px;
+    }
+
+    //active tile styles
+    .radio-button:checked + .radio-tile {
+      background-color: $primary-color;
+      border: 2px solid $primary-color;
+      color: white;
+      transform: scale(1.1, 1.1);
+
+      .icon svg {
+        fill: white;
+        background-color: $primary-color;
+      }
+      .radio-tile-label {
+        color: white;
+        background-color: $primary-color;
+      }
+    }
+  }
 }
